Prevent awkward line break on home print heading.

--- a/css/main.css
+++ b/css/main.css
@@ -679,6 +679,18 @@ footer {
   .masthead .container {
     padding-top: 60px;
   }
+
+  .feature {
+    margin-top: 8px;
+  }
+
+  .feature.print {
+    margin-top: -18px;
+  }
+
+  .features h3 {
+    line-height: 26px;
+  }
 }
 
 @media (min-width: 1200px) {
